Fix svg overflowing parent column.

--- a/src/components/ViewBox/viewBox.css
+++ b/src/components/ViewBox/viewBox.css
@@ -2,6 +2,11 @@
   height: 100%;
 }
 
+.svg-container {
+  max-height: 100%;
+  overflow: hidden;
+}
+
 .view-box-testimonial-group {
   height: 100%
 }
